<resources>
    <string name="app_name">UI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iphone_12">Iphone 12</string>
    <string name="buy_now_">Buy now!</string>
    <string name="s_per_mega_">Super.Mega.Rapido.</string>
    <string name="new_icon">New</string>
    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best Seller</string>
    <string name="see_more">see more</string>
    <string name="some_id">$1,047</string>
    <string name="some_id1">$1,500</string>
    <string name="samsung_gal">Samsung Galaxy s20 Ultra</string>

    <string-array name="locations">
        <item>Nicosia</item>
        <item>Kyrinea</item>
        <item>Paphos</item>
        <item>Limasol</item>
        <item>Famagusta</item>
        <item>Nizhny Novgorod</item>
    </string-array>


    <string-array name="brand_spinner">
        <item>Select Brand</item>
        <item>Iphone</item>
        <item>Samsung</item>
        <item>Xiaomi</item>
    </string-array>

    <string-array name="price_spinner">
        <item>Select Price</item>
        <item>$0 - $300</item>
        <item>$300 - $500</item>
        <item>$500 - $10000</item>
    </string-array>

    <string-array name="size_spinner">
        <item>Select Size</item>
        <item>4.5 to 5.5 inches</item>
        <item>5.5 to 6.5 inches</item>
        <item>6.5 to 7.5 inches</item>
    </string-array>
    <string name="done">Done</string>
    <string name="filter_opti">Filter options</string>

    <string name="brand_price">Brand \nPrice\nSize</string>
    <string name="brand" />
    <string name="price" />
    <string name="size" />

    <string name="product_det">Product Details</string>
    <string name="galaxy_note">Galaxy Note 20 Ultra</string>
    <string name="select_colo">\u000DSelect color and capacity</string>

    <string name="btn_add_to_cart_text">Add to Cart \u0020\u0020\u0020 "$"%1$s</string>
</resources>