<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentetion.PhonesFragment">

    <TextView
        android:id="@+id/see_more2"
        android:layout_width="64dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|top"
        android:text="@string/see_more"
        android:textAppearance="@style/see_more"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hot_sales"
        android:layout_width="111dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|top"
        android:text="@string/hot_sales"
        android:textAppearance="@style/hot_sales"
        android:textColor="#010035"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/horizontal_recycler"
        android:layout_width="0dp"
        android:layout_height="182dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/see_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/horizontal_recycler_layout" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vertical_recycler"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginEnd="211dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier3"
        tools:listitem="@layout/vertical_recycler_layout" />

    <TextView
        android:id="@+id/best_seller"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|top"
        android:text="@string/best_seller"
        android:textAppearance="@style/best_seller"
        app:layout_constraintBottom_toTopOf="@+id/vertical_recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_recycler"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/see_more"
        android:layout_width="64dp"
        android:layout_height="19dp"


        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="13dp"
        android:gravity="center_horizontal|top"
        android:text="@string/see_more"
        android:textAppearance="@style/see_more"
        app:layout_constraintBottom_toTopOf="@+id/vertical_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_recycler" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="see_more,see_more2,hot_sales,horizontal_recycler,best_seller"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
