<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/phone_holder"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_4">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="110dp"
                android:gravity="center_horizontal|top"
                android:text="@string/some_id"
                android:textAppearance="@style/some_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/discount_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginStart="7dp"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal|top"
                android:text="@string/some_id1"
                android:textAppearance="@style/some_id1"
                app:layout_constraintStart_toEndOf="@+id/price"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/samsung_gal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="38dp"
                android:gravity="top"
                android:text="@string/samsung_gal"
                android:textAppearance="@style/samsung_gal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discount_price"
                tools:text="@string/samsung_gal" />

            <ImageView
                android:id="@+id/ellipse_8"
                android:layout_width="35dp"
                android:layout_height="35dp"

                android:layout_marginTop="11dp"
                android:layout_marginEnd="16dp"
                android:elevation="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ellipse_8"
                app:tint="@color/background_color" />

            <ImageView
                android:id="@+id/heart_small"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/vectorheart_small_white"
                android:elevation="20dp"
                app:layout_constraintBottom_toBottomOf="@id/ellipse_8"
                app:layout_constraintEnd_toEndOf="@id/ellipse_8"
                app:layout_constraintStart_toStartOf="@id/ellipse_8"
                app:layout_constraintTop_toTopOf="@id/ellipse_8" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
